Added code for ForecastIo scraper

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,17 @@
-# Ignore Play! working directory #
-bin/
-/db
-.eclipse
-/lib/
-/logs/
-/modules
-/project/project
-/project/target
-/target
-tmp/
-test-result
-server.pid
+#JAVA
+*.class
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+# Package Files #
+*.jar
+*.war
+*.ear
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+#Intellij
 *.iml
-*.eml
-/dist/
-.cache
-.Rproj.user
+.idea/
+*.ipr
+*.iws
+.idea_modules/
